--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 body, html {
   background: #B7C4BF;
   width: 100%;
+  height: 100vh;
   position: relative;
 }
 
@@ -20,7 +21,6 @@ p {
   max-width: 32.81em;
   height: 25em;
   margin: 0 auto;
-  margin-top: 8em;
   padding: 2.2em;
 
   border-radius: 10px;
@@ -30,6 +30,12 @@ p {
   -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
   -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
   box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  transform: translateY(-50%);
 }
 
 .quote {
