--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ body, html {
   width: 100%;
   height: 100vh;
   position: relative;
+
+  padding: .3em;
+  padding-top: 1em;
 }
 
 p {
@@ -101,7 +104,7 @@ p {
 
 /*add media queries*/
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 500px) and (orientation: landscape) {
 
   .wrapper {
     height: 30em;
