--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,11 @@ p, a {
 }
 
 .wrap .container {
-  background: red;
-  color: blue;
-  text-align: center;
+  color: #51ADC2;
   width: 70%;
   margin: 0 auto;
+  text-align: center;
+  padding: .3em;
   position: absolute;
   top: 40%;
   left: 0;
@@ -29,21 +29,38 @@ p, a {
 }
 
 .wrap .container .quote {
-  font-size: 1.2em;
+  font-size: 1.3em;
   line-height: 1.5;
 }
 
 .wrap .container .references {
-  background: yellow;
   text-align: right;
+  line-height: 1.5;
   margin: 2em 0;
+  font-style: italic;
+}
+
+.wrap .container .references .character {
+  font-size: 1em;
+}
+
+.wrap .container .references .film {
+  font-size: .8em;
 }
 
 .wrap .buttons {
-  background: red;
   position: absolute;
   text-align: center;
   bottom: 1em;
-  left: 0;
-  right: 0;
+  left: 1em;
+  right: 1em;
+  width: 70%;
+  margin: 0 auto;
+}
+
+.wrap .buttons button {
+  padding: .5em;
+  font-size: 1.4em;
+  margin: 0 .5em;
+  color: #51ADC2;
 }
