--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,14 @@ p, a {
   background: #000;
   min-height: 100vh;
   position: relative;
+  padding: 1em;
 }
 
 .wrap .container {
-  color: #51ADC2;
   width: 70%;
+  max-width: 639.09px;
   margin: 0 auto;
+  color: #51ADC2;
   text-align: center;
   padding: .3em;
   position: absolute;
@@ -33,6 +35,12 @@ p, a {
   line-height: 1.5;
 }
 
+@media screen and (min-width: 800px) {
+  .wrap .container .quote {
+    font-size: 1.6em;
+  }
+}
+
 .wrap .container .references {
   text-align: right;
   line-height: 1.5;
@@ -44,23 +52,44 @@ p, a {
   font-size: 1em;
 }
 
+@media screen and (min-width: 800px) {
+  .wrap .container .references .character {
+    font-size: 1.3em;
+  }
+}
+
 .wrap .container .references .film {
   font-size: .8em;
 }
 
+@media screen and (min-width: 800px) {
+  .wrap .container .references .film {
+    font-size: 1em;
+  }
+}
+
 .wrap .buttons {
+  width: 70%;
+  max-width: 639.09px;
+  margin: 0 auto;
   position: absolute;
   text-align: center;
   bottom: 1em;
   left: 1em;
   right: 1em;
-  width: 70%;
-  margin: 0 auto;
 }
 
 .wrap .buttons button {
+  background: none;
+  border: none;
   padding: .5em;
   font-size: 1.4em;
   margin: 0 .5em;
   color: #51ADC2;
+}
+
+@media screen and (min-width: 800px) {
+  .wrap .buttons button {
+    font-size: 1.7em;
+  }
 }
