--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,6 +63,7 @@ p, a {
     button {
       background: none;
       border: none;
+      outline: none;
 
       padding: .5em;
       font-size: 1.4em;
