--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,15 @@ p, a {
   background: #000;
   min-height: 100vh;
   position: relative;
-  padding: 1em;
+  padding: 4em;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 .wrap .container {
   width: 70%;
   max-width: 639.09px;
   margin: 0 auto;
-  color: #51ADC2;
+  color: #5186C2;
   text-align: center;
   padding: .3em;
   position: absolute;
@@ -74,7 +75,7 @@ p, a {
   margin: 0 auto;
   position: absolute;
   text-align: center;
-  bottom: 1em;
+  bottom: 4em;
   left: 1em;
   right: 1em;
 }
@@ -86,7 +87,7 @@ p, a {
   padding: .5em;
   font-size: 1.4em;
   margin: 0 .5em;
-  color: #51ADC2;
+  color: #5186C2;
 }
 
 @media screen and (min-width: 800px) {
