--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,8 @@ p, a {
   background: #000;
   min-height: 100vh;
   position: relative;
-  padding: 1em;
+  padding: 4em;
+  font-family: 'Source Sans Pro', sans-serif;
 
   .container {
     @include widthSeventy;
@@ -56,7 +57,7 @@ p, a {
     @include widthSeventy;
     position: absolute;
     text-align: center;
-    bottom: 1em;
+    bottom: 4em;
     left: 1em;
     right: 1em;
 
