--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@ p, a {
 }
 
 .wrap {
-  background: #000;
+  background: #000 url("../stars.jpg") center/cover no-repeat;
   min-height: 100vh;
   position: relative;
   padding: 4em;
